[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "lambdas"
version = "0.1.0"
description = "Typed lambdas that are short and readable"
license = "BSD-2-Clause"

authors = [
  "sobolevn <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/dry-python/lambdas"
homepage = "https://lambdas.readthedocs.io"

keywords = [
  "functional programming",
  "fp",
  "lambda",
  "lambdas",
  "composition",
  "type-safety",
  "mypy",
  "stubs"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = ">=4.0,<5.0"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
wemake-python-styleguide = "^0.17.0"
flake8-pytest = "^1.4"
flake8-pytest-style = "^1.6.0"
flake8-pyi = "^22.8"
nitpick = "^0.32.0"

safety = "^2.1"

pytest = "^7.1"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"
pytest-mypy-plugins = "^1.10"

sphinx = "^5.1"
sphinx-autodoc-typehints = "^1.19"
sphinxcontrib-mermaid = "^0.7"
sphinx-typlog-theme = "^0.8.0"
doc8 = "^1.0.0"
m2r2 = "^0.3.3"
tomlkit = "^0.11.4"
