[tool.poetry]
name = "lambdas"
version = "0.2.0"
description = "Typed lambdas that are short and readable"
license = "BSD-2-Clause"

authors = [
  "sobolevn <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/dry-python/lambdas"
homepage = "https://lambdas.readthedocs.io"

keywords = [
  "functional programming",
  "fp",
  "lambda",
  "lambdas",
  "composition",
  "type-safety",
  "mypy",
  "stubs"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
typing-extensions = ">=4.0,<5.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

wemake-python-styleguide = "^0.18"
flake8-pytest = "^1.4"
flake8-pytest-style = "^1.7.2"
flake8-pyi = "^23.6.0"
nitpick = "^0.34.0"

safety = "^2.3.5"

pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"
pytest-mypy-plugins = "^3.0.0"

sphinx = "^7.1"
sphinx-autodoc-typehints = "^1.24.0"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-typlog-theme = "^0.8.0"
doc8 = "^1.1.1"
m2r2 = "^0.3.3.post2"
tomlkit = "^0.12.1"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.18.0/styles/nitpick-style-wemake.toml"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
